Add gradle-wrapper.jar as this was missing

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,50 @@
+# Created by https://www.toptal.com/developers/gitignore/api/kotlin,gradle,intellij+all
+# Edit at https://www.toptal.com/developers/gitignore?templates=kotlin,gradle,intellij+all
+
+### Intellij+all Patch ###
+# Ignores the whole .idea folder and all .iml files
+# See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
+
+.idea/**
+# consider uncommenting the codeStyles and inspectionProfiles below
+# !.idea/inspectionProfiles
+# !.idea/inspectionProfiles/profiles_settings.xml
+# !.idea/inspectionProfiles/Project_Default.xml
+# !.idea/codeStyles
+# !.idea/codeStyles/codeStyleConfig.xml
+
+# Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
+
+*.iml
+modules.xml
+*.ipr
+
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# CMake
+cmake-build-*/
+
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+# Sonarlint plugin
+.idea/sonarlint
+
+### Kotlin ###
 # Compiled class file
 *.class
 
@@ -21,10 +68,34 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-replay_pid*
 
-# Ignore Gradle project-specific cache directory
+### Gradle ###
 .gradle
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+### Gradle Patch ###
+**/build/
+
+# Eclipse Gradle plugin generated files
+# Eclipse Core
+.project
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# End of https://www.toptal.com/developers/gitignore/api/kotlin,gradle,intellij+all
 
 # Ignore Gradle build output directory
 build
+/.env
